# fidchar

./: .gitignore  HYDRA_COMPARISON.md  HYDRA_MIGRATION_COMPLETE.md  README.md  apifeatures.md  charapi_verbose.py  charity_donations_report.html  charity_evaluations.txt  charity_metrics.csv  claude.md  config.yaml  current.md  data.csv  features.md  pyproject.toml  rules.md  t1.html  test_charapi.py
.claude/: settings.local.json
archive/: PROPOSED_STRUCTURE.md  REFACTOR_PLAN.md  charapi_csv.py  config_original.yaml  config_schema.py  great_tables_builder.py  markdown_report_builder.py  myrctest.py  rctest.py  reporting_old.py  test_analyze_recurring_basic.py  test_report_generation.py  test_structure.py  text_report_builder.py
cache/: charapi_cache.db
charity_api/: .gitignore  CURRENT.md  README.md  __init__.py  pyproject.toml
charity_api/analyzers/: compliance_checker.py  financial_analyzer.py  trend_analyzer.py  validation_scorer.py
charity_api/api/: charity_evaluator.py
charity_api/clients/: propublica_client.py
charity_api/config/: config.yaml  test_config.yaml
charity_api/data/: charity_evaluation_result.py  mock_data.py
charity_api/tests/: test_charity_api.py
experiments/: great_tables_sample.py  gt_compact_demo.py  gt_demo.py  gt_integration_example.py  simple_gt_sample.py  styles.css  table_examples.txt
fidchar/: .gitignore  __init__.py  analysis.py  comprehensive_report.py  config.yaml  data_processing.py  definitions.md  great_tables_builder.py  html_report_builder.py  main.py  main_original.py  newtodo.md  report_builder.py  reporting.py  t1.html  t1.md  t1.txt  visualization.py
perf/: PERFORMANCE_ANALYSIS.md  analyze_performance.py  profile_fidchar.py  profile_line_by_line.py
tests/: README.md  __init__.py  test_analysis.py  test_analyze_recurring_basic.py  test_data_processing.py  test_export_csv.py  test_for_consideration.py  (+2 more)
(+31 files in other folders)
