[project]
name = "fidchar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "charapi",
    "great-tables>=0.18.0",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pdfkit>=1.0.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "selenium>=4.35.0",
    "tabulate>=0.9.0",
]

[tool.uv.sources]
charapi = { path = "../charapi", editable = true }
